--- a/chat_upgrade/chat.css
+++ b/chat_upgrade/chat.css
@@ -70,6 +70,10 @@
     overflow-y: auto;
     border-left: 1px solid #ccc;
 }
+.chat-user-container{
+    display: flex;
+    flex-direction: row;
+}
 #back-btn{
     display: none;
 }
