--- a/chat_upgrade/directchat.css
+++ b/chat_upgrade/directchat.css
@@ -27,8 +27,14 @@
     border-left: 1px solid #ccc;
     margin-top: 10px; /* Adjust for spacing from nav */
 }
+.chat-user-container{
+    display: flex;
+    flex-direction: column;
+}
+.back-btn{
 
-
+    cursor: pointer;
+}
 /* Message List */
 .message-container {
     flex-grow: 1;
