--- a/style.css
+++ b/style.css
@@ -104,28 +104,30 @@
     }
     .plant-item-buttons {
         display: flex;
-        align-items: center;
-        gap: 1rem;
-        font-size: clamp(1rem, 1vw, 1.5rem);
+        justify-content: space-between;
+        gap: 0.5rem;
     }
-    .view-details {
-        padding: 10px;
+
+
+    button.chat-seller {
+        padding: 10px 10px;
         border: none;
-        border-radius: 20px;
-        background-color: #386641;
-        color: #4CAF50;
-        font-weight: 600;
+        border-radius: 10px; /* Rounder buttons */
         cursor: pointer;
+        color: #fff;
+        font-weight: bold;
+        transition: background-color 0.3s ease;
+        font-size: 13px;
+        margin-left: 20px;
     }
-    .chat-seller {
-        padding: 10px;
-        border: none;
-        border-radius: 20px;
-        background-color: #0A0908;
-        color: #FDFFFC;
-        font-weight: 600;
-        cursor: pointer;
+    button.chat-seller {
+        background-color: black;
     }
+    
+    button.chat-seller:hover {
+        background-color: #333;
+    }
+    
     #viewDetailsModal .modal-body {
         padding: 20px;
     }
@@ -342,3 +344,5 @@
         height: auto;
     
     }
+    
+    
